Added event db interface function. Removed event update endpoint from swagger
